single-multiple-route draft

--- a/.gitignore
+++ b/.gitignore
@@ -182,4 +182,7 @@ cython_debug/
 .history
 .ionide
 
+# large datasets
+data/*
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
